# Todo-App

./: .gitignore  Agent-Skills-Mapping.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  Phase2-Reusable-Intelligence-List.md  QUICK_START.md  README.md  SETUP.md  TESTING.md  analysis_report.md  main.py  pyproject.toml  skillsdoc.md  test_app.py  test_interactive.py
.claude/agents/: cli-systems-agent.md  implementation-planner.md  product-architect-agent.md  quality-review-agent.md  spec-authoring-agent.md  spec-refinement-agent.md
.specify/memory/: constitution.md
Phase-2/: CHANGELOG.md  DEPLOYMENT_SUMMARY.md  NEXT_JS_FEATURES_COMPLETE.md  NOTIFICATION_FINAL_FIX.md  NOTIFICATION_FIX_DEBUG_LOGS.md  NOTIFICATION_ISSUE_SUMMARY.md  deploy-huggingface.sh  deploy-railway.sh  deploy-vercel.sh  test-app.html  test-frontend.html  verify-setup.ps1  verify-setup.sh
Phase-2/backend/: main.py
Phase-2/docs/: API.md  CONSTITUTION_COMPLIANCE.md  DEPLOYMENT.md  DEPLOY_HUGGINGFACE.md  performance.md
Phase-2/project-docs/: COMPLETE_SOLUTION.md  CORS_FIX_INSTRUCTIONS.md  DATABASE_AND_NOTIFICATIONS_COMPLETE.md  DEPLOYMENT_FIX.md  FINAL_TESTING_STEPS.md  HOW_TO_TEST_NOTIFICATIONS.md  IMPLEMENTATION_COMPLETE.md  NOTIFICATION_DEBUG_GUIDE.md  NOTIFICATION_FIX_COMPLETE.md  PROBLEM_SOLVED.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md
history/adr/: 001-layered-architecture-pattern.md  002-in-memory-storage-strategy.md  003-frontend-technology-stack.md  004-backend-technology-stack.md  005-authentication-strategy.md  006-database-strategy.md  (+1 more)
src/: __init__.py  main.py
tests/: __init__.py
(+93 files in other folders)
